RESOLVED FIXED205650
REGRESSION(r253360): [GTK] Page starts loading during animation in back/forward gesture
https://bugs.webkit.org/show_bug.cgi?id=205650
Summary REGRESSION(r253360): [GTK] Page starts loading during animation in back/forwa...
Alice Mikhaylenko
Reported 2019-12-30 13:18:31 PST
This only happens in non-accelerated mode. Looks like `DrawingAreaCoordinatedGraphics` still redraws everything in non-accelerated mode when the layer tree state is frozen.
Attachments
Patch (1.88 KB, patch)
2020-05-05 05:19 PDT, Alice Mikhaylenko
no flags
Alice Mikhaylenko
Comment 1 2019-12-30 13:21:32 PST
This is a regression from https://github.com/WebKit/webkit/commit/94d2fcd0c2eb2399b31253290153676de5cf21ee, as that change relies on freezing to prevent page redraws.
Alice Mikhaylenko
Comment 2 2020-05-05 05:19:55 PDT
Alice Mikhaylenko
Comment 3 2020-05-05 05:20:53 PDT
I'm not sure this is a clean fix, but it works.
EWS
Comment 4 2020-06-19 05:27:28 PDT
Committed r263259: <https://trac.webkit.org/changeset/263259> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398497 [details].
Note You need to log in before you can comment on or make changes to this bug.