REGRESSION(r253360): [GTK] Page starts loading during animation in back/forward gesture https://bugs.webkit.org/show_bug.cgi?id=205650

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2020-06-19
Reviewed by Carlos Garcia Campos.

r253360 changed the swipe gesture to start loading the page during the gesture, relying on
freezing the layer tree state to prevent unwanted redraws. However, it was implemented for
AC mode, but didn't prevent redraws in non-accelerated mode. Add a simple check to skip
redraws in this case.

* WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::display): Skip drawing if layer tree state is frozen.

Canonical link: https://commits.webkit.org/226168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263259 268f45cc-cd09-0410-ab3c-d52691b4dbfc